--- a/WebContent/css/muro.cash.css
+++ b/WebContent/css/muro.cash.css
@@ -36,7 +36,7 @@ header ul li {
 header ul li a{
 	color: darkgreen;
 	font-weight: bold;
-	font-size: 2vmin;
+	font-size: 2.5vmin;
 	text-transform: uppercase;
 	text-decoration: none;
 }
@@ -47,7 +47,9 @@ header ul li a:hover  {
 
 article {
 	flex: 1;
+	width: 100%;
 	background-color: honeydew;
+	margin: 0;
 	padding: 0;
 	overflow-y: auto;
 }
@@ -70,7 +72,7 @@ article ul {
 article ul li {
 	background-color: darkgreen;
 	color: honeydew;
-	padding: 1em;
+	padding: 0.2em 0.5em 0.2em 0.5em;
 	display: block;
 }
 
@@ -95,10 +97,11 @@ pre code {
 }
 
 footer {
-	padding: 0 1em 0 1em;
+	padding: 0.2em 0.5em 0.2em 0.5em;
+	margin: 0px;
+	font-size: 0.8em;
 	text-align: justify;
-	width: 100%;
-	display: inline-block;
+	display: block;
 }
 
 .bchaddress {
